# ComfyUI-QwenVL-Utils

./: .gitignore  README.md  __init__.py  attention.py  config.py  gguf_backend.py  gguf_models.json  hf_backend.py  inference_config.json  node_helpers.py  nodes.py  output_cleaner.py  path_nodes.py  pyproject.toml  requirements.txt  test_attention_modes.py  tooltips.json  util_nodes.py  utils.py
config/: __init__.py  gguf_models.json  hf_models.json  system_prompts.json  tooltips.json
docs/: LLAMA_CPP_PYTHON_BUILD_GUIDE.md
lib/: __init__.py  attention.py  device.py  gguf_backend.py  hf_backend.py  media.py  model_utils.py  output_cleaner.py  settings.py
nodes/: __init__.py  input_nodes.py  path_nodes.py  qwenvl_nodes.py
